examples/failing/ArgLengthMismatch.purs
-- @shouldFailWith ArgListLengthsDiffer
module ArgLengthMismatch where

import Prelude

f x y = true
f = false
